# openlab-control

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  OpenLabControl.spec  README.md  SECURITY.md  build.bat  open_env.bat  pyproject.toml  requirements.txt  run.bat  run.py  run_console.bat  setup.bat
configs/: default.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DAT_FORMAT.md  DECISIONS.md  OPERATIONS.md  PLUGIN_DEVELOPMENT.md  SEQUENCE_FORMAT.md  TECHNICAL_SPECIFICATION.md  TEST_PLAN.md  VERIFICATION_REPORT.md
examples/: disabled_commands.seq  module_measurement.seq  nested_scan.seq  temperature_list.seq  template_original.plt  template_original.seq
modules/simulated_transport/: backend.py  frontend.py  module.toml
plugin_templates/: controller_plugin.py  measurement_plugin.py  monitor_plugin.py  test_plugin.py
plugin_templates/measurement_module/: backend.py  frontend.py  module.toml
src/labcontrol/: __init__.py  app.py  config.py  dat_reader.py  datafile.py  events.py  formatting.py  models.py  paths.py  plot_format.py  plugins.py  runtime.py  stability.py  units.py
src/labcontrol/devices/: __init__.py  base.py  (+1 more)
src/labcontrol_plugins/: __init__.py
tests/: test_dat_reader.py  test_data_browser.py  test_datafile.py  test_devices_and_units.py  test_engine.py  test_events_and_stability.py  test_main_window.py  test_measurement_modules.py  test_plot_format.py  test_sequence_editor.py  test_sequence_parser.py  test_status_tile.py  test_ui_scaling.py
tools/: capture_data_browser.py  capture_module_preview.py  capture_preview.py  capture_sequence_menu.py
(+20 files in other folders)
