[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openlab-control"
version = "0.10.1"
description = "Plugin-oriented low-temperature, magnetic-field and measurement control framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
    "QtAwesome>=1.3,<2",
    "packaging>=24,<27",
]

[project.scripts]
openlab-control = "labcontrol.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
